--- a/requirements_server.txt
+++ b/requirements_server.txt
@@ -1,7 +1,7 @@
 astroid==1.6.3
 Django==2.0.4
 django-appconf==1.0.2
->>>>>>> dev
+# dev
 django-cors-headers==2.2.0
 django-imagekit==4.0.2
 django-model-utils==3.1.2
