novo exemplo que representa melhor o ambiente

--- a/.env.exemple
+++ b/.env.exemple
@@ -1,12 +1,23 @@
 DEBUG=True
+
 CSRF_COOKIE_SECURE=False
+
 SESSION_COOKIE_SECURE=False
-SECRET_KEY=s3cr3t
-DATABASE_URL=sqlite:////tmp/db.sqlite3
-ALLOWED_HOSTS=*
-EMAIL_BACKEND=django.core.mail.backends.filebased.EmailBackend
+
+SECRET_KEY=3izb^ryglj(bvrjb2_y1fZvcnbky#358_l6-nn#i8fkug4mmz!
+
+DATABASE_URL=postgres://pmsb_db_user:pmsb_db_pass@127.0.0.1:5433/pmsb_db
+
+ALLOWED_HOSTS=127.0.0.1,
+
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
+
 EMAIL_HOST=email_host
+
 EMAIL_PORT=587
+
 EMAIL_HOST_USER=host_user
+
 EMAIL_HOST_PASSWORD=s3cr3t
+
 EMAIL_USE_TLS=True
