--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-cors-headers==2.2.0
 django-imagekit==4.0.2
 django-model-utils==3.1.2
 djangorestframework==3.8.2
+django-extra-fields==1.0.0
 django-widget-tweaks==1.4.2
 lazy-object-proxy==1.3.1
 pilkit==2.0
