--- a/.env.exemple
+++ b/.env.exemple
@@ -21,3 +21,9 @@ EMAIL_HOST_USER=host_user
 EMAIL_HOST_PASSWORD=s3cr3t
 
 EMAIL_USE_TLS=True
+
+AWS_ACCESS_KEY_ID=key
+AWS_SECRET_ACCESS_KEY=secret
+AWS_STORAGE_BUCKET_NAME=files
+AWS_S3_REGION_NAME=sfo2
+AWS_S3_ENDPOINT_URL=https://pmsb.sfo2.digitaloceanspaces.com
