--- a/requirements.txt
+++ b/requirements.txt
@@ -20,3 +20,5 @@ gunicorn==19.9.0
 filemagic==1.6
 django-rest-swagger==2.2.0
 djangorestframework-jwt==1.11.0
+boto3==1.9.123
+django-storages==1.7.1
