--- a/.env.exemple
+++ b/.env.exemple
@@ -12,15 +12,18 @@ ALLOWED_HOSTS=127.0.0.1,
 
 EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 
-EMAIL_HOST=email_host
+EMAIL_HOST=smtp.gmail.com
 
 EMAIL_PORT=587
 
-EMAIL_HOST_USER=host_user
+EMAIL_HOST_USER=pmsb.web@gmail.com
 
 EMAIL_HOST_PASSWORD=s3cr3t
 
 EMAIL_USE_TLS=True
+
+LOCAL_STATIC_SERVER=True
+LOCAL_MEDIA_SERVER=True
 
 AWS_ACCESS_KEY_ID=key
 AWS_SECRET_ACCESS_KEY=secret
